chore:Vertical Spacing Issue Resolved

--- a/docs/assets/css/default.css
+++ b/docs/assets/css/default.css
@@ -89,7 +89,14 @@ html {
     margin-bottom: 1.5rem;
 }
 
+
+
+
+
 }
+
+
+
 @media (min-width: 576px) {
 .carousel-item.communityday #communityday-logo {
     height: 150px;
@@ -334,6 +341,7 @@ img.communityday-sponsor-small {
 
 .header.header-transparent .navbar-brand img {
     vertical-align: top;
+    width: 12rem;
 }
 
 .header.header-transparent ul.navbar-nav {
@@ -1516,4 +1524,33 @@ img.communityday-sponsor-small {
     visibility: visible; 
     animation-duration: 1.5s; 
     animation-delay: 400ms;
+}
+
+@media only screen and (min-width: 360px) and (max-width: 480px) {
+    .ts-intro {
+        padding-bottom: 1rem !important;
+        padding-top: 5rem;
+    }
+
+    .ts-schedule {
+        padding-top: 2rem;
+        position: relative;
+        overflow: hidden;
+    }
+    .ts-schedule-nav {
+        text-align: center;
+        margin-bottom: 10px !important;
+    }
+
+    .header.header-transparent .navbar-brand img {
+        vertical-align: top;
+        width: 9rem;
+    }
+
+    .header.header-transparent ul.navbar-nav > li > a {
+        color: #fff;
+        line-height: 35px;
+    }
+
+    
 }
